# task-manager

./: README.md  README_LAB4.md  docker-compose.prod.yaml  docker-compose.yaml  load-test.js
.github/workflows/: ci.yml
ansible/: inventory.ini  playbook.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
backend/config/: default.yaml  local.yaml.example
backend/seeders/: priorities.json  statuses.json
backend/src/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/src/app/repositories/: __init__.py  base.py  task.py
backend/src/app/routers/: __init__.py  priorities.py  statuses.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_api_health.py  test_api_priorities.py  test_api_statuses.py  test_api_tasks.py  test_config.py  test_models.py  test_repositories.py  test_schemas.py
frontend/: .editorconfig  .env  .gitignore  Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  sonar-project.properties  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.module.css  App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.test.ts  client.ts  mock.ts  (+1 more)
k8s/: namespace.yaml
k8s/argocd/: application.yaml
k8s/backend/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/db/: secret.yaml  service.yaml  statefulset.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/monitoring/: dashboard-configmap.yaml  prometheus-values.yaml
terraform/: main.tf  outputs.tf  variables.tf
(+11 files in other folders)
