[project]
name = "task-manager-backend"
version = "0.1.0"
description = "FastAPI backend for task manager lab work."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 120
target-version = ["py312"]
include = "src/.+\\.pyi?$|tests/.+\\.pyi?$"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

